Added personal assingment lesson 6 validation and error handling
